[tool.poetry]
name = "cw-tools"
version = "0.1.0"
description = ""
authors = ["Uri Bar Ilan <ubarilan@gmail.com>"]
readme = "README.md"
packages = [{include = "cw_tools"}]

[tool.poetry.scripts]
dev = "cw_tools:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
bcrypt = "^4.0.0"
flake8 = "^5.0.4"
pyinstaller = "^5.4.1"
typer = {extras = ["all"], version = "^0.6.1"}
PyMySQL = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
